<resources>
    <string name="app_name">SALi</string>
    <string name="about_sali">About SALi</string>
    <string name="welcome_title">Welcome to SALi. &lt;br/&gt; Would you like to add one feed?</string>
    <string name="never">never</string>
    <string name="update">Update</string>
    <string name="colon">:\u00A0</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_refresh">Refresh</string>
    <string name="sali_feeds">SALi feeds</string>
    <string name="error">Error</string>
    <string name="network_error">The network is not set up</string>
    <string name="loading">Loading…</string>
    <string name="no_result">No result</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="language">Language</string>
    <string name="menu_night_mode">Night mode</string>
    <string name="menu_delete_feed_entries">Delete all</string>
    <string name="menu_delete_read_entries">Delete read</string>
    <string name="menu_delete_feed">Unsubscribe</string>
    <string name="menu_edit_feed">Edit feed</string>
    <string name="menu_mark_read_feed">Mark as read</string>
    <string name="menu_mark_unread_feed">Mark as unread</string>
    <string name="feeds">Feeds</string>
    <string name="menu_add_feed">Add feed</string>
    <string name="no_feeds">No feeds</string>
    <string name="no_filters">No rules</string>
    <string name="context_menu_delete">Delete</string>
    <string name="edit_feed_title">Edit feed</string>
    <string name="new_feed_title">New feed</string>
    <string name="context_menu_edit">Edit</string>
    <string name="menu_add_group">Add group</string>
    <string name="menu_import">Import from OPML</string>
    <string name="menu_export">Export to OPML</string>
    <string name="storage_request_explanation">To be able to import or export the feeds from or to a file, you must allow the application to access to the storage memory.</string>
    <string name="error_feed_error">The feed website is unreachable.</string>
    <string name="error_feed_process">The feed can not be processed.</string>
    <string name="error_feed_url_exists">The address already exists.</string>
    <string name="error_feed_import">The selected file could not be imported.</string>
    <string name="error_feed_export">The export has failed. Make sure you have a writable SD-card mounted.</string>
    <string name="error_external_storage_not_available">The external storage (e.g. SD-card) is not available.</string>
    <string name="feed_url">URL address</string>
    <string name="optional">optional</string>
    <string name="website_or_feed">rss url</string>
    <string name="feed_search_hint" translatable="false">keyword, rss url, website or blog name</string>
    <string name="tab_feed_title">Feed</string>
    <string name="tab_google_title">Groups</string>
    <string name="tab_filters_title">Filter</string>
    <string name="feed_title">TITLE</string>
    <string name="feed_filters">FILTER RULES</string>
    <string name="filter_add_title">Add rule</string>
    <string name="filter_delete_title">Delete rule</string>
    <string name="filter_edit_title">Edit rule</string>
    <string name="filter_is_regex">is a regular expression</string>
    <string name="filter_apply_to_title">Apply to title</string>
    <string name="filter_apply_to_content">Apply to content</string>
    <string name="accept">ACCEPT</string>
    <string name="reject">REJECT</string>
    <string name="feed_search">Feed search</string>
    <string name="select_file">Select file (SD-root)</string>
    <string name="question_delete_feed">Do you really want to delete this feed?</string>
    <string name="question_delete_group">Do you really want to delete this group and all of its feeds?</string>
    <string name="question_delete_filter">Do you really want to delete this filter?</string>
    <string name="add_group_title">Select group name</string>
    <string name="edit_group_title">Edit group name</string>
    <string name="message_exported_to">Exported into %s.</string>
    <string name="to_group_title">Feed move action</string>
    <string name="to_group_message">You can either put this feed into or above this group. What do you want to do?</string>
    <string name="to_group_above">Above the group</string>
    <string name="to_group_into">Into the group</string>
    <string name="google_news_indicator">Select one or several topics to add. Some of them may not be provided by Google for your language.</string>
    <string name="google_news_top_stories">Top Stories</string>
    <string name="google_news_world">World</string>
    <string name="google_news_business">Business</string>
    <string name="google_news_technology">Technology</string>
    <string name="google_news_entertainment">Entertainment</string>
    <string name="google_news_sports">Sports</string>
    <string name="google_news_science">Science</string>
    <string name="google_news_health">Health</string>
    <string name="unread_entries">Unread</string>
    <string name="all_entries">All articles</string>
    <string name="no_entries">No entries</string>
    <string name="favorites">Favorites</string>
    <string name="context_menu_share_starred">Share starred entries</string>
    <string name="menu_star">Star</string>
    <string name="menu_unstar">Unstar</string>
    <string name="menu_share">Share</string>
    <string name="menu_full_screen">Full screen</string>
    <string name="menu_copy_clipboard">Copy link</string>
    <string name="menu_mark_as_unread">Mark as unread</string>
    <string name="share_favorites_title">SALi: starred entries</string>
    <string name="copied_clipboard">Link copied</string>
    <string name="see_enclosure">See enclosure</string>
    <string name="see_link">See in browser</string>
    <string name="cant_open_link">No application found for this link</string>
    <string name="open_enclosure">Open enclosure</string>
    <string name="file">File</string>
    <string name="download_and_save">Download and save</string>
    <string name="open_link">Open link</string>
    <string name="tip_sentence">Tip: slide left to mark as read and slide right to mark as favorite</string>
    <string name="undo">Undo</string>
    <string name="marked_as_read">Marked as read</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="transparency">Transparency</string>
    <string name="settings_category_refresh">Automated refresh</string>
    <string name="settings_refresh_enabled">Enable automatic refresh</string>
    <string name="settings_refresh_enabled_description">Enable the automatic refresh of feeds</string>
    <string name="settings_refresh_interval">Refresh interval</string>
    <string name="settings_category_notifications">Notifications</string>
    <string name="settings_notifications_enabled">Enable notifications</string>
    <string name="settings_notifications_enabled_description">Enable notifications in case of new entries</string>
    <string name="settings_notifications_ringtone">Ringtone</string>
    <string name="settings_notifications_ringtone_none">None</string>
    <string name="settings_notifications_vibrate">Vibrate</string>
    <string name="settings_notifications_vibrate_description">Enable the vibration on new entries</string>
    <string name="settings_notifications_light">Light</string>
    <string name="settings_notifications_light_description">Enable notification light on new entries</string>
    <string name="settings_category_content_presentation">Content presentation</string>
    <string name="settings_keep_time">Time that the entries will be kept</string>
    <string name="settings_display_images">Display images</string>
    <string name="settings_display_images_description">Display images in entries</string>
    <string name="settings_preload_image_mode">Preload images</string>
    <string name="settings_font_size">Text size</string>
    <string name="settings_display_oldest_first">Entries order</string>
    <string name="settings_display_oldest_first_description">Display oldest entries first</string>
    <string name="settings_display_entries_fullscreen">Auto-fullscreen entries</string>
    <string name="settings_display_entries_fullscreen_description">Automatically display entries in fullscreen</string>
    <string name="settings_refresh_on_open">Refresh feeds on open</string>
    <string name="settings_refresh_on_open_description">Refreshes all feeds after opening the application</string>
    <string name="settings_refresh_wifi_only">Refresh only over Wi-Fi</string>
    <string name="settings_refresh_wifi_only_description">Automatic refresh will only be done if Wi-Fi connection is available</string>
    <string name="settings_visible_feeds">Visible feeds</string>
    <string name="settings_widget_background">Background</string>
    <string name="settings_widget_background_description">Color and transparency of the widget background</string>
    <string name="all_feeds">All feeds (incl. future)</string>
    <string name="settings_pager_transformer">News slide animation</string>
    <string name="settings_pager_transformer_description">Animation to be applied on slide to next news</string>
    <string name="settings_app_theme">Theme</string>
    <string name="settings_other">Other</string>
    <string name="settings_dev_page">More apps</string>
    <string name="settings_app_share">Share app</string>
    <string name="settings_app_rate">Rate app</string>
    <string name="settings_ads_type">Ads type</string>
    <string name="rta_dialog_title">Rate this app</string>
    <string name="rta_dialog_message">If you enjoy using this app, you can rate it on Google Play. Do you want to rate it?</string>
    <string name="rta_dialog_ok">Rate now</string>
    <string name="rta_dialog_cancel">Later</string>
    <string name="rta_dialog_no">No, thanks</string>
    <string name="banner" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interstitial" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <plurals name="number_of_new_entries">
        <item quantity="one">One new entry</item>
        <item quantity="other">%d new entries</item>
    </plurals>
    <string-array name="settings_intervals">
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>1 day</item>
    </string-array>
    <string-array name="settings_keep_times">
        <item>1 day</item>
        <item>2 days</item>
        <item>4 days</item>
        <item>1 week</item>
        <item>2 weeks</item>
        <item>1 month</item>
        <item>2 months</item>
        <item>3 months</item>
        <item>Forever</item>
    </string-array>
    <string-array name="settings_font_sizes">
        <item>-2</item>
        <item>-1</item>
        <item>Standard</item>
        <item>+1</item>
        <item>+2</item>
        <item>+3</item>
    </string-array>
    <string-array name="settings_preload_image_modes">
        <item>Never</item>
        <item>Only over Wi-Fi</item>
        <item>Always</item>
    </string-array>
    <string-array name="app_theme_colors" translatable="false">
        <item>Black</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Violet</item>
    </string-array>
</resources>