<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content">

    <PreferenceScreen
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/about_sali">

        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="sali.rss.news.feed.reader.android.app.activity.AboutActivity"
            android:targetPackage="sali.rss.news.feed.reader.android.app"/>
    </PreferenceScreen>

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings_category_refresh">

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="refresh.enabled"
            android:summary="@string/settings_refresh_enabled_description"
            android:title="@string/settings_refresh_enabled"/>

        <sali.rss.news.feed.reader.android.app.view.AutoSummaryListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="1800000"
            android:dependency="refresh.enabled"
            android:entries="@array/settings_intervals"
            android:entryValues="@array/settings_interval_values"
            android:inputType="number"
            android:key="refresh.interval"
            android:title="@string/settings_refresh_interval"/>

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="refreshonopen.enabled"
            android:summary="@string/settings_refresh_on_open_description"
            android:title="@string/settings_refresh_on_open"/>

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="refreshwifionly.enabled"
            android:summary="@string/settings_refresh_wifi_only_description"
            android:title="@string/settings_refresh_wifi_only"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings_category_content_presentation">

        <sali.rss.news.feed.reader.android.app.view.AutoSummaryListPreference
            android:defaultValue="BlueTheme"
            android:entries="@array/app_theme_colors"
            android:entryValues="@array/app_themes"
            android:key="app_theme"
            android:title="@string/settings_app_theme" />

        <ListPreference
            android:defaultValue="FLOW"
            android:entries="@array/pager_transformer_types"
            android:entryValues="@array/pager_transformer_types"
            android:key="pager_transformer"
            android:title="@string/settings_pager_transformer"
            android:summary="@string/settings_pager_transformer_description"/>

        <sali.rss.news.feed.reader.android.app.view.AutoSummaryListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="4"
            android:entries="@array/settings_keep_times"
            android:entryValues="@array/settings_keep_time_values"
            android:inputType="number"
            android:key="keeptime"
            android:title="@string/settings_keep_time"/>

        <sali.rss.news.feed.reader.android.app.view.AutoSummaryListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="0"
            android:entries="@array/settings_font_sizes"
            android:entryValues="@array/settings_font_size_values"
            android:inputType="number"
            android:key="fontsize"
            android:title="@string/settings_font_size"/>

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="display_images"
            android:summary="@string/settings_display_images_description"
            android:title="@string/settings_display_images"/>

        <sali.rss.news.feed.reader.android.app.view.AutoSummaryListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="WIFI_ONLY_PRELOAD"
            android:dependency="display_images"
            android:entries="@array/settings_preload_image_modes"
            android:entryValues="@array/settings_preload_image_modes_values"
            android:inputType="text"
            android:key="preload_image_mode"
            android:title="@string/settings_preload_image_mode"/>

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="display_oldest_first"
            android:summary="@string/settings_display_oldest_first_description"
            android:title="@string/settings_display_oldest_first"/>

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="display_entries_fullscreen"
            android:summary="@string/settings_display_entries_fullscreen_description"
            android:title="@string/settings_display_entries_fullscreen"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings_category_notifications">

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:key="notifications.enabled"
            android:summary="@string/settings_notifications_enabled_description"
            android:title="@string/settings_notifications_enabled"/>

        <RingtonePreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dependency="notifications.enabled"
            android:key="notifications.ringtone"
            android:ringtoneType="notification"
            android:title="@string/settings_notifications_ringtone"/>

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dependency="notifications.enabled"
            android:key="notifications.vibrate"
            android:summary="@string/settings_notifications_vibrate_description"
            android:title="@string/settings_notifications_vibrate"/>

        <CheckBoxPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="true"
            android:dependency="notifications.enabled"
            android:key="notifications.light"
            android:summary="@string/settings_notifications_light_description"
            android:title="@string/settings_notifications_light"/>

    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_other">
        <Preference
            android:key="app_share"
            android:title="@string/settings_app_share"></Preference>
        <Preference
            android:key="app_rate"
            android:title="@string/settings_app_rate"></Preference>
        <Preference
            android:key="dev_page"
            android:title="@string/settings_dev_page"></Preference>
        <sali.rss.news.feed.reader.android.app.view.AutoSummaryListPreference
            android:defaultValue="interstitial"
            android:entries="@array/ads_types"
            android:entryValues="@array/ads_types_keys"
            android:key="ad_type"
            android:title="@string/settings_ads_type"/>
    </PreferenceCategory>

</PreferenceScreen>