<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include layout="@layout/view_toolbar" />

    <TabHost
        android:id="@+id/tabHost"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <RelativeLayout
                    android:id="@+id/google_tab"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/toolbar"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="20dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="15dp"
                                android:text="@string/google_news_indicator"
                                android:textAppearance="?android:attr/textAppearanceMedium" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/language"
                                    android:textAppearance="?android:attr/textAppearanceMedium"
                                    android:textStyle="bold" />

                                <Spinner
                                    android:id="@+id/languagesG"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:entries="@array/feed_languages" />
                            </LinearLayout>

                            <CheckBox
                                android:id="@+id/cb_top_stories"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/google_news_top_stories" />

                            <CheckBox
                                android:id="@+id/cb_world"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/google_news_world" />

                            <CheckBox
                                android:id="@+id/cb_business"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/google_news_business" />

                            <CheckBox
                                android:id="@+id/cb_technology"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/google_news_technology" />

                            <CheckBox
                                android:id="@+id/cb_entertainment"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/google_news_entertainment" />

                            <CheckBox
                                android:id="@+id/cb_sports"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/google_news_sports" />

                            <CheckBox
                                android:id="@+id/cb_science"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/google_news_science" />

                            <CheckBox
                                android:id="@+id/cb_health"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/google_news_health" />
                        </LinearLayout>

                    </ScrollView>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/feed_tab"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <LinearLayout
                        android:id="@+id/feed_lang_container"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/language"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold" />

                        <Spinner
                            android:id="@+id/languages"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:entries="@array/feed_languages" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/feed_manual"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/feed_lang_container"
                        android:orientation="vertical">

                        <TextView

                            android:id="@+id/url_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/feed_url"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/feed_url"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/url_textview"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="5dp"
                            android:hint="@string/website_or_feed"
                            android:inputType="textUri"
                            android:maxLines="1" />

                        <TextView
                            android:id="@+id/name_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/feed_url"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/feed_title"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/feed_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/name_textview"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="5dp"
                            android:hint="@string/optional"
                            android:maxLines="1" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/feed_search"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/feed_lang_container"
                        android:orientation="vertical">

                        <TextView

                            android:id="@+id/feed_keyword_textview"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/feed_search"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/feed_keyword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/feed_keyword_textview"
                            android:layout_marginStart="10dp"
                            android:layout_marginEnd="10dp"
                            android:layout_marginTop="5dp"
                            android:hint="@string/feed_search_hint"
                            android:imeOptions="actionSearch"
                            android:inputType="textUri"
                            android:maxLines="1" />
                    </LinearLayout>


                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/filters_tab"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/filter_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/feed_filters"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:textStyle="bold" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@+id/filter_textview"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp">

                        <TextView
                            android:id="@android:id/empty"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/no_filters" />

                        <ListView
                            android:id="@android:id/list"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:choiceMode="singleChoice" />
                    </FrameLayout>
                </RelativeLayout>
            </FrameLayout>
        </LinearLayout>
    </TabHost>

</RelativeLayout>